Wed Aug 22 22:44:13 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Okay, setting the pixmap and atoms works now, bar an imlib2 bug
	we need to fix. So right now, rather than dump core, I leak X
	connections whenever you set a BG. No big hit unless you do
	thousands, and it's only temporary until we fix imlib2.
	* This is mainly for raster to check out right now.

Wed Aug 22 17:01:08 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Okay, setting bg from cmdline when not running E was broken,
	basically because we didn't XFlush before exiting. My bad.
    * Ugh. I'm trying to emulate Esetroot, by setting the atoms needed to
    tell Eterm where the bg pixmap is. Of course, when feh exits, the
    pixmap is cleaned up by X, unless I do an XSetCloseDownMode(disp,
    RetainPermanent); However, this means all my crap hangs around, I want
    it to be cleaned up. So anyone know how I can make the pixmap stick
    around in X, without leaving windows and other pixmaps there too?
    (Esetroot lets it all hang out basically, but it's non graphical and
    can afford to. It always exits after doing it's job and the next time
    you run it, it frees the last pixmap it made).

Mon Aug 20 20:58:47 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* If you specify a font that can't be loaded, feh attempts to fall
	back to 'fixed', then '*'.

Sat Aug 18 19:15:22 2001  Tom Gilber <tom@linuxbrit.co.uk>

	* Added, 'w, W' and a menu option to resize the window to the
	current image dimensions.

Thu Aug 16 23:07:33 2001  Tom Gilbert <tom@linuxbrit.co.uk>

	* Added 'x' to close a window but not exit everything.

Thu Aug 16 00:23:26 2001  Tom Gilbert  <gilbertt@linuxbrit.co.uk>

	* Fook. Broke backgrounding in E for 1.0, enlightenment IPC does
	NOT support "filename with a space" at all. You can't do
	it. ARGH. Okay, so back that out.
	* Add setting bg from commandline, quite useful because it'll use
	E if it's there or fallback to X, i.e. it should always do the